Fixed figures and links

--- a/figs/results/result.tex
+++ b/figs/results/result.tex
@@ -38,7 +38,7 @@
 % The content of the fbox below will be replaced in the result file with contact and grade data
 \noindent
 \fbox{\parbox{0.5\textwidth}
-{John Doe jdoe$@$myschool.edu  nil Seat:\ pc14 Exam:\ 324 
+{John Doe jdoe$@$myschool.edu  22/10/1998 Seat:\ pc14 Exam:\ 324 
 
 February 15, 2019 %\today
 \\\textbf{Your grade is}: $5$ (Good: 4, Wrong: 3)
