LaTeX template: No more apparent contraint to same answers num for each question

--- a/site-app/testmk/R/finance101-template/finance101.tex
+++ b/site-app/testmk/R/finance101-template/finance101.tex
@@ -1,11 +1,12 @@
-% This is the scratch of a template to be use by mix.R for random question generation
-% Put many questions here so that mix.R can randomly extract only n of them 
+% This is the scratch of a template to be used by mix.R for random question generation
+% Put many questions here so that mix.R can randomly extract only n of them
+%
 % \CorrectChoice and \choice should always start on a new line
 % mix.r wants \printanswers command, do not remove/comment it.
-% All questions need to have the same number of answers
-% NOTE: The grade.R will replace the content of the first \fbox{...}, with:
-% student details found in answer files and grades
-% grades are obtained matching answer files with solution RData file.
+% NOTE:
+% "grade.R" replaces the content of the first \fbox{...}, with:
+%     student details found in answer files and grades
+% Grades are obtained matching answer files with RData solution file.
 
 
 \documentclass{exam}
